--- a/registro.html
+++ b/registro.html
@@ -1,102 +1,119 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro - Catálogo de Videojuegos</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Registro — GameCatalog</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
     <style>
-        body {
-            margin: 0;
-            font-family: 'Orbitron', Arial, sans-serif;
-            background: url('https://images.unsplash.com/photo-1511512578047-dfb367046420?auto=format&fit=crop&w=1500&q=80') no-repeat center center fixed;
-            background-size: cover;
-            color: #fff;
-        }
-        .registro-container {
-            background: rgba(20, 20, 40, 0.92);
-            max-width: 400px;
-            margin: 60px auto;
-            padding: 40px 30px;
-            border-radius: 16px;
-            box-shadow: 0 4px 24px #000a;
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        label {
-            display: block;
-            margin-bottom: 8px;
-            font-size: 1.1em;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 18px;
-            border-radius: 8px;
-            border: none;
-            font-size: 1em;
-        }
-        button {
-            width: 100%;
-            background: #00ffe7;
-            color: #222;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 8px;
-            padding: 15px 0;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background: #009e9e;
-            color: #fff;
-        }
+        :root{--accent:#00ffe7;--dark:#0b0b12;--card:#1e1e3c}
+        body{margin:0;font-family:'Orbitron',Arial,Helvetica,sans-serif;background:var(--dark);color:#fff;display:flex;flex-direction:column;min-height:100vh}
+        header{padding:12px 18px;background:transparent}
+        main{flex:1;display:flex;align-items:center;justify-content:center;padding:28px}
+        .card{background:var(--card);padding:24px;border-radius:12px;max-width:540px;width:100%;box-shadow:0 10px 30px rgba(0,0,0,0.6)}
+        h1{margin:0 0 12px;color:var(--accent)}
+        label{display:block;margin-top:12px;font-size:14px;color:#ddd}
+        input{width:100%;padding:10px;border-radius:8px;border:none;background:#111;color:#fff;margin-top:6px}
+        .actions{display:flex;gap:8px;justify-content:flex-end;margin-top:16px}
+        .btn{background:var(--accent);color:#042;padding:10px 14px;border-radius:8px;border:none;cursor:pointer}
+        .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#fff}
+        .note{color:#bbb;margin-top:8px;font-size:13px}
+        .err{color:#ffb0b0;margin-top:8px}
+        .success{color:#b7ffd9;margin-top:8px}
+        .small{font-size:13px;color:#aaa}
     </style>
 </head>
 <body>
-    <div class="registro-container">
-        <h2>Registro de Usuario</h2>
-        <form>
-            <label for="email">Correo electrónico</label>
-            <input type="email" id="email" name="email" required>
+    <header>
+        <div style="max-width:1200px;margin:0 auto;display:flex;align-items:center;gap:12px">
+            <a href="index.html" style="color:var(--accent);text-decoration:none;font-weight:700">GameCatalog</a>
+            <nav style="margin-left:12px;display:flex;gap:12px"><a href="catalogo.html" style="color:#fff">Catálogo</a><a href="index.html" style="color:#fff">Inicio</a></nav>
+        </div>
+    </header>
 
-            <label for="usuario">Nombre de usuario</label>
-            <input type="text" id="usuario" name="usuario" required>
+    <main>
+        <div class="card" role="form" aria-labelledby="formTitle">
+            <h1 id="formTitle">Crear cuenta</h1>
+            <p class="note">Regístrate para guardar favoritos y acceder a funciones personalizadas.</p>
 
-            <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" required>
+            <form id="regForm" novalidate>
+                <label for="email">Correo electrónico</label>
+                <input id="email" type="email" autocomplete="email" placeholder="tu@correo.com" required>
 
-            <label for="confirmar">Confirmar contraseña</label>
-            <input type="password" id="confirmar" name="confirmar" required>
+                <label for="username">Nombre de usuario</label>
+                <input id="username" type="text" autocomplete="username" placeholder="TuNombre" required>
 
-            <button type="submit">Registrarse</button>
-        </form>
-        <div id="mensaje-exito" style="display:none; margin-top:20px; color:#00ffe7; text-align:center; font-size:1.1em;"></div>
-    </div>
+                <label for="password">Contraseña</label>
+                <input id="password" type="password" autocomplete="new-password" placeholder="Mínimo 8 caracteres" required>
+
+                <label for="confirm">Confirmar contraseña</label>
+                <input id="confirm" type="password" autocomplete="new-password" placeholder="Repite la contraseña" required>
+
+                <div style="display:flex;align-items:center;gap:8px;margin-top:8px">
+                    <input id="showPw" type="checkbox"><label for="showPw" class="small">Mostrar contraseña</label>
+                </div>
+
+                <div id="message" aria-live="polite"></div>
+
+                <div class="actions">
+                    <a href="index.html" class="btn-ghost btn" style="text-decoration:none;display:inline-flex;align-items:center;justify-content:center">Cancelar</a>
+                    <button type="submit" id="submitBtn" class="btn">Registrarse</button>
+                </div>
+            </form>
+
+            <p class="note" style="margin-top:12px">¿Ya tienes cuenta? <a href="index.html" style="color:var(--accent)">Entrar</a></p>
+        </div>
+    </main>
+
     <script>
-    document.querySelector('form').addEventListener('submit', function(e) {
-        e.preventDefault();
-        const email = document.getElementById('email').value;
-        const usuario = document.getElementById('usuario').value;
-        const password = document.getElementById('password').value;
-        const confirmar = document.getElementById('confirmar').value;
-        const mensaje = document.getElementById('mensaje-exito');
-        if(password !== confirmar) {
-            mensaje.style.display = 'block';
-            mensaje.style.color = '#ff4c4c';
-            mensaje.textContent = 'Las contraseñas no coinciden.';
-            return;
-        }
-        // Guardar datos en localStorage
-        const usuarioData = { email, usuario, password };
-        localStorage.setItem('usuarioRegistrado', JSON.stringify(usuarioData));
-        mensaje.style.display = 'block';
-        mensaje.style.color = '#00ffe7';
-        mensaje.textContent = '¡Registro exitoso!';
-        this.reset();
-    });
+        const form = document.getElementById('regForm');
+        const email = document.getElementById('email');
+        const username = document.getElementById('username');
+        const password = document.getElementById('password');
+        const confirm = document.getElementById('confirm');
+        const message = document.getElementById('message');
+        const showPw = document.getElementById('showPw');
+
+        showPw.addEventListener('change', ()=>{
+            const t = showPw.checked ? 'text' : 'password';
+            password.type = t; confirm.type = t;
+        });
+
+        function setMessage(text, type){ message.textContent = text; message.className = type ? type : ''; }
+
+        function validateEmail(v){ return /^\S+@\S+\.\S+$/.test(v); }
+
+        form.addEventListener('submit', (e)=>{
+            e.preventDefault();
+            setMessage('');
+            const em = email.value.trim().toLowerCase();
+            const un = username.value.trim();
+            const pw = password.value;
+            const cpw = confirm.value;
+
+            if(!validateEmail(em)){ setMessage('Introduce un correo electrónico válido.', 'err'); email.focus(); return; }
+            if(un.length < 3){ setMessage('El nombre de usuario debe tener al menos 3 caracteres.', 'err'); username.focus(); return; }
+            if(pw.length < 8){ setMessage('La contraseña debe tener al menos 8 caracteres.', 'err'); password.focus(); return; }
+            if(pw !== cpw){ setMessage('Las contraseñas no coinciden.', 'err'); confirm.focus(); return; }
+
+            // Load existing users from localStorage
+            const users = JSON.parse(localStorage.getItem('gc_users')||'[]');
+            if(users.some(u=>u.email === em)){ setMessage('Ya existe una cuenta con ese correo.', 'err'); email.focus(); return; }
+            if(users.some(u=>u.username.toLowerCase() === un.toLowerCase())){ setMessage('El nombre de usuario ya está en uso.', 'err'); username.focus(); return; }
+
+            // Demo storage: avoid plain-text passwords in production. Here we store base64 for convenience.
+            const pwStored = btoa(pw);
+            users.push({email: em, username: un, password: pwStored, created: new Date().toISOString()});
+            localStorage.setItem('gc_users', JSON.stringify(users));
+
+            // Optionally, auto-login by storing current user
+            localStorage.setItem('gc_currentUser', JSON.stringify({email: em, username: un}));
+
+            setMessage('Registro completado. Redirigiendo...', 'success');
+            setTimeout(()=>{ window.location.href = 'index.html'; }, 1500);
+        });
     </script>
+
+    <script src="header.js"></script>
 </body>
 </html>
